# tarven-note

./: button.html  docker-compose.yml  index.js  main.py  manifest.json  pyproject.toml  settings.html
.serena/: project.yml
docs/: DESIGN.md  PHASES.md  WORKFLOW.md
extension/: manifest.json
server/: main.py  requirements.txt
server/api/: campaigns.py  entities.py  extract.py  health.py  ingest.py  messages.py  queries.py  relationships.py
server/core/: config.py
server/db/: neo4j.py  schema.py  sqlite.py  sqlite_schema.py  vector.py
server/repositories/: campaigns.py  entities.py  queries.py  relationships.py  sqlite_entities.py  sqlite_messages.py  utils.py
server/schemas/: campaigns.py  entities.py  entity_attributes.py  extract.py  ingest.py  messages.py  paths.py  relationships.py  subgraph.py
server/services/: llm.py  normalizer.py
